--- a/src/index.css
+++ b/src/index.css
@@ -17,17 +17,17 @@
   }
 
   nav {
-    background-color: #807a7a;
+    /* background-color: #807a7a; */
     z-index: 10; /* Ensures it's above content */
 }
   
   a {
     font-weight: 500;
-    color: #646cff;
+    color: #c0c1cf;
     text-decoration: inherit;
   }
   a:hover {
-    color: #535bf2;
+    color: #616266;
   }
   
   body {
