--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
+    background-color: #2c2a2a;
   
     font-synthesis: none;
     text-rendering: optimizeLegibility;
@@ -16,10 +16,9 @@
     -webkit-text-size-adjust: 100%;
   }
 
-  nav {
-    /* background-color: #807a7a; */
-    z-index: 10; /* Ensures it's above content */
-}
+  header {
+    background-color: #334491;
+  }
   
   a {
     font-weight: 500;
@@ -32,8 +31,6 @@
   
   body {
     margin: 0;
-    /* min-width: 320px; */
-    /* min-height: 100vh; */
   }
   
   h1 {
@@ -60,7 +57,7 @@
     outline: 4px auto -webkit-focus-ring-color;
   }
   footer {
-    background-color: #807a7a;
+    background-color: #696464;
     z-index: 10;
 }
   .profile-footer {
